[package]
name = "firebirust"
version = "0.5.4"
authors = ["Hajime Nakagami <nakagami@gmail.com>"]
description = "Firebird client library"
license = "MIT"
repository = "https://github.com/nakagami/firebirust"
keywords = ["database", "sql"]
categories = ["database"]
edition = "2024"

[dependencies]
num-bigint = "0.2"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
time = "0.1"
maplit = "1.0"
rust-crypto = "0.2"
hex = "0.3"
rand = "0.7"
url = "2.1"
percent-encoding = "2.1"
chrono = "0.4"
chrono-tz = "0.6"
urlencoding = "2.1"

[dependencies.async-std]
version = "1.13"
